appId: com.studycenter.sc_student
---
- launchApp: {clearState: true}
- extendedWaitUntil:
    visible: "Masuk"
    timeout: 15000
- tapOn: "email@contoh.com / username"
- eraseText
- inputText: "jelita.efni@example.com"
- tapOn: "Masukkan password"
- eraseText
- inputText: "12345"
- tapOn: 'SC Student'
- tapOn: 'Login Sekarang'
- waitForAnimationToEnd:
    timeout: 8000
- extendedWaitUntil:
    visible: "Jelita Efni Telaumbanua"
    timeout: 30000
- tapOn: {text: "Jurnal Hari Ini"}
- extendedWaitUntil:
    visible: "Jurnal Harian"
    timeout: 20000
- takeScreenshot: journal_open
