appId: com.studycenter.sc_student
---
- launchApp: {clearState: true}
- extendedWaitUntil:
    visible: "Masuk"
    timeout: 15000
- tapOn: "email@contoh.com / username"
- eraseText
- inputText: "admin.test@example.com"
- tapOn: "Masukkan password"
- eraseText
- inputText: "12345"
- tapOn: 'SC Student'
- tapOn: 'Login Sekarang'
- waitForAnimationToEnd:
    timeout: 12000
- takeScreenshot: admin_login
