appId: com.studycenter.sc_student
---
- launchApp:
    clearState: true

- assertVisible: "Masuk"
- tapOn:
    id: "emailField"
- inputText: "testuser"
- pressKey: Enter
- tapOn:
    id: "passwordField"
- inputText: "12345"
- pressKey: Back

- assertVisible: "Simpan info login"

- scrollUntilVisible:
    element: "Masuk"
    direction: DOWN
- tapOn:
    id: "loginBtn" # Let's use ID just in case there are multiple "Masuk" texts on screen (e.g., the title)

- extendedWaitUntil:
    visible: "Beranda.*|Jurnal|Profil"
    timeout: 15000

- takeScreenshot: "test_login_testuser_success"
